--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -335,9 +335,9 @@ button.btn.btn-default:disabled {
   margin: 0 auto;
 }
 
-.nav {
+/* .nav {
   margin-top: 36px;
-}
+} */
 
 .nav ul {
   border: none;
